# comparing-cookie-cutter-project-templates-for-ml

./: .gitmodules  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
cookiecutter/CCDS/: index.html
cookiecutter/CCDS_MLOPs_chim50/: index.html
cookiecutter/CCDS_MLOPs_fmind/: index.html
cookiecutter/CCDS_ukgov/: index.html
docs/: index.md
docs/cookiecutter/: CCDS.md  CCDS_MLOPs_chim50.md  CCDS_MLOPs_fmind.md  CCDS_ukgov.md
docs/misc/: MLOpsPython.md  cml.md  zenml.md
misc/MLOpsPython/: index.html
misc/cml/: index.html
misc/zenml/: index.html
projects/ccds_chim50_example/: Makefile  README.md
projects/ccds_drivendata_example/: Makefile  README.md  pyproject.toml
projects/ccds_drivendata_example/ccds_example/: dataset.py  features.py  plots.py
projects/ccds_drivendata_example/ccds_example/modeling/: predict.py  train.py
projects/ccds_drivendata_example/docs/: mkdocs.yml
projects/ccds_drivendata_example/docs/docs/: index.md
projects/ccds_fmind_example/: Dockerfile  README.md  justfile  pyproject.toml
projects/ccds_fmind_example/src/ccds_fmind_example/: __main__.py
projects/ccds_fmind_example/tests/: test_scripts.py
projects/ccds_ukgov_example/: Makefile  README.md
projects/ccds_ukgov_example/docs/: Makefile  conf.py  index.rst  make.bat
proposed_structures/: index.html
search/: search_index.json
site/cookiecutter/CCDS/: index.html
site/cookiecutter/CCDS_ukgov/: index.html
site/misc/zenml/: index.html
